--- a/sci-DepartTP1/Super Cartes Infinies/Super Cartes Infinies.csproj
+++ b/sci-DepartTP1/Super Cartes Infinies/Super Cartes Infinies.csproj
@@ -19,6 +19,7 @@
 <PrivateAssets>all</PrivateAssets>
 </PackageReference>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.8" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.5" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
 
