--- a/sci-DepartTP1/Models/Models.csproj
+++ b/sci-DepartTP1/Models/Models.csproj
@@ -12,4 +12,7 @@
 	<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.8" />
 	<PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="8.0.8" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
 </Project>
