--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -72,14 +72,21 @@ jobs:
       uses: actions/setup-dotnet@v4
       with:
         dotnet-version: 8.0.x
+    - name: Install dependencies
+      run: dotnet restore
+      working-directory: src/Super Cartes Infinies
+    - name: Build
+      run: dotnet build --configuration Release --no-restore
+
+      # Execute all unit tests in the solution
+    - name: Execute unit tests
+      run: dotnet test --no-build --verbosity normal
 
     # Add  MSBuild to the PATH: https://github.com/microsoft/setup-msbuild
     - name: Setup MSBuild.exe
       uses: microsoft/setup-msbuild@v2
 
-    # Execute all unit tests in the solution
-    - name: Execute unit tests
-      run: dotnet test --no-build --verbosity normal
+    
 
     # Restore the application to populate the obj folder with RuntimeIdentifiers
     - name: Restore the application
