--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -74,6 +74,7 @@ jobs:
         dotnet-version: 8.0.x
     - name: Install dependencies
       run: dotnet restore
+      working-directory: sci-DepartTP1/Super Cartes Infinies
     - name: Build
       run: dotnet build --no-restore
 
