--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -77,6 +77,7 @@ jobs:
       working-directory: sci-DepartTP1/Super Cartes Infinies
     - name: Build
       run: dotnet build --no-restore
+      working-directory: sci-DepartTP1/Super Cartes Infinies
 
       # Execute all unit tests in the solution
     - name: Execute unit tests
