--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -73,16 +73,17 @@ jobs:
       with:
         dotnet-version: 8.0.x
     - name: Install dependencies
+      working-directory: sci-DepartTP1/Tests
       run: dotnet restore
-      working-directory: sci-DepartTP1/Super Cartes Infinies
+
     - name: Build
+      working-directory: sci-DepartTP1/Tests
       run: dotnet build --no-restore
-      working-directory: sci-DepartTP1/Super Cartes Infinies
 
       # Execute all unit tests in the solution
     - name: Execute unit tests
-      run: dotnet test --no-build --verbosity normal
       working-directory: sci-DepartTP1/Tests
+      run: dotnet test --no-build --verbosity normal
 
     # Add  MSBuild to the PATH: https://github.com/microsoft/setup-msbuild
     - name: Setup MSBuild.exe
