--- a/sci-DepartTP1/WebApi/appsettings.json
+++ b/sci-DepartTP1/WebApi/appsettings.json
@@ -1,6 +1,7 @@
 {
     "ConnectionStrings": {
-        "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=SuperCartesInfinies;Trusted_Connection=True;MultipleActiveResultSets=True"
+        //"DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=SuperCartesInfinies;Trusted_Connection=True;MultipleActiveResultSets=True"
+        "DefaultConnection": "DataSource=app.db;Cache=Shared"
     },
     "Logging": {
         "LogLevel": {
