--- a/.github/workflows/release_superserveur.yml
+++ b/.github/workflows/release_superserveur.yml
@@ -23,6 +23,7 @@ jobs:
 
       - name: Build with dotnet
         run: dotnet build --configuration Release
+        working-directory: sci-DepartTP1/WebApi
 
       - name: dotnet publish
         run: dotnet publish -c Release -o "${{env.GITHUB_WORKSPACE}}\myapp" "WebApi\WebApi.csproj"
