--- a/.github/workflows/release_superserveur.yml
+++ b/.github/workflows/release_superserveur.yml
@@ -27,6 +27,7 @@ jobs:
 
       - name: dotnet publish
         run: dotnet publish -c Release -o "${{env.GITHUB_WORKSPACE}}\myapp" "WebApi\WebApi.csproj"
+        working-directory: sci-DepartTP1/WebApi
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
