--- a/.github/workflows/release_superserveur.yml
+++ b/.github/workflows/release_superserveur.yml
@@ -27,7 +27,7 @@ jobs:
 
       - name: dotnet publish
         run: dotnet publish -c Release -o "${{env.GITHUB_WORKSPACE}}/myapp" "WebApi/WebApi.csproj"
-        working-directory: sci-DepartTP1/WebApi
+        working-directory: sci-DepartTP1
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
